# AV

./: .gitignore  README.md
hardware-setup/luxonis-oak-d-pro/: README.md
hardware-setup/luxonis-oak-d-pro/python/: depth-preview.py  mono-previews.py  rgb-preview.py
hardware-setup/rc-car/: README.md  xgapd-car-control.py
hardware-setup/rc-car/car-tests/: README.md
hardware-setup/rc-car/car-tests/esc-controller/: esc-controller.ino
hardware-setup/rc-car/car-tests/esc-handling/: esc-handling.ino
hardware-setup/rc-car/car-tests/esc-servo-control/: esc-servo-control.ino
hardware-setup/rc-car/car-tests/esc-servo-controller/: esc-servo-controller.ino
hardware-setup/rc-car/car-tests/servo-controller/: servo-controller.ino
hardware-setup/rc-car/car-tests/servo-handling/: servo-handling.ino
hardware-setup/rc-car/chassis-firmware/: chassis-firmware.ino
hardware-setup/rc-car/control-script/: main
hardware-setup/rc-car/esc-test-esp32/: esc-test-esp32.ino
hardware-setup/rc-car/example-control-script/: main.cpp
hardware-setup/rc-car/firmware-sketch/: firmware-sketch.ino
hardware-setup/rc-car/firmware-tests/gamepad-control-script/: CMakeLists.txt  main.cpp
hardware-setup/rc-car/maverick-firmware/: maverick-firmware.ino
hardware-setup/rc-car/rc-car/: rc-car.ino
hardware-setup/rc-car/serial-test/: README.md
hardware-setup/rc-car/serial-test/master/: master  (+1 more)
hardware-setup/rc-car/servo-test-esp32/: servo-test-esp32.ino
hardware-setup/rplidar-a1m8/: README.md
hardware-setup/rplidar-a1m8/python/: example-usage.py  visualization-of-measurements.py
(+6 files in other folders)
